Fix title and unwrapped links

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -30,16 +30,23 @@ blockquote {
   font-size: 0.95rem;
 }
 
+a {
+  overflow-wrap: break-word;
+  word-break: break-word;
+  hyphens: none;
+}
+
 /* Base */
 #site-header {
   margin-bottom: $lm-gap * 2;
   border-bottom: 1px solid $border-color;
 }
 
-.site-title {
+a.site-title {
   font-weight: 500;
   text-decoration: none;
   font-size: $font-size-base;
+  color: $body-color;
 }
 
 .nav-link {
